test/spec_vectors/simd_lane/ok/module_139.wat
(module (memory 1) (func (export "as-v128_store-operand-1") (param v128 i32) (result v128) (v128.store (i32.const 0) (i8x16.replace_lane 0 (local.get 0) (local.get 1))) (v128.load (i32.const 0))) (func (export "as-v128_store-operand-2") (param v128 i32) (result v128) (v128.store (i32.const 0) (i16x8.replace_lane 0 (local.get 0) (local.get 1))) (v128.load (i32.const 0))) (func (export "as-v128_store-operand-3") (param v128 i32) (result v128) (v128.store (i32.const 0) (i32x4.replace_lane 0 (local.get 0) (local.get 1))) (v128.load (i32.const 0))) (func (export "as-v128_store-operand-4") (param v128 f32) (result v128) (v128.store (i32.const 0) (f32x4.replace_lane 0 (local.get 0) (local.get 1))) (v128.load (i32.const 0))) (func (export "as-v128_store-operand-5") (param v128 i64) (result v128) (v128.store (i32.const 0) (i64x2.replace_lane 0 (local.get 0) (local.get 1))) (v128.load (i32.const 0))) (func (export "as-v128_store-operand-6") (param v128 f64) (result v128) (v128.store (i32.const 0) (f64x2.replace_lane 0 (local.get 0) (local.get 1))) (v128.load (i32.const 0))))